# unfoldable

./: .gitignore  CHANGELOG.md  README  README.markdown  cabal.project  index.html  params.json  unfoldable.cabal
.github/workflows/: haskell-ci.yml
examples/: brackets.hs  btree.hs  redblack.hs  tree.hs
src/Data/: Biunfoldable.hs  Splittable.hs  Triunfoldable.hs  Unfoldable.hs  Unfolder.hs
src/Data/Unfolder/: Arbitrary.hs
