cabal-version:        3.6
name:                 unfoldable
version:              1.1
synopsis:             Class of data structures that can be unfolded.
description:          Just as there's a Foldable class, there should also be an Unfoldable class.

                      This package provides one. Example unfolds are:

                      * Random values
                      * Enumeration of all values (depth-first or breadth-first)
                      * Convert from a list

                      Some examples can be found in the examples directory.
homepage:             https://github.com/sjoerdvisscher/unfoldable
bug-reports:          https://github.com/sjoerdvisscher/unfoldable/issues
license:              BSD-3-Clause
license-file:         LICENSE
author:               Sjoerd Visscher
maintainer:           sjoerd@w3future.com
category:             Generics
build-type:           Simple
tested-with:          GHC==9.6.7, GHC==9.8.4, GHC==9.10.3, GHC==9.12.2, GHC==9.14.1


extra-doc-files:
  CHANGELOG.md

extra-source-files:
  examples/*.hs
  src/Data/Triunfoldable.hs

library
  hs-source-dirs:   src
  default-language: Haskell2010

  exposed-modules:
    Data.Unfolder
    Data.Unfoldable
    Data.Biunfoldable

  build-depends:
      base         == 4.*
    , containers   >= 0.6 && < 0.9
    , one-liner    == 2.*
    , random       >= 1   && < 1.4
    , transformers >= 0.4 && < 0.7
    , QuickCheck   >= 2.7.3 && < 3

  default-extensions:
      GeneralizedNewtypeDeriving
    , RankNTypes
    , Trustworthy
    , TupleSections
    , TypeOperators
    , DefaultSignatures
    , FlexibleContexts
    , TypeApplications

source-repository head
  type:     git
  location: https://github.com/sjoerdvisscher/unfoldable
